# ProtocolHandler

./: CMakeLists.txt  README.md
apps/: viewers.7z
data/: file.txt
include/Facade/: facade.h
include/ProtocolHandler/: hdlc_handler.h
result/: HDLC_TEST_RESULT.sig
src/: main.cpp
src/Facade/: facade.cpp
src/ProtocolHandler/: hdlc_handler.cpp
tests/: main_t.cpp
